2017-09-03  Eric Herman <eric@freesa.org>

	be explicit about void parameter lists

	* src/dumb-os-alloc.h: void foo();   ->   void foo(void);
	* src/dumb-os-alloc.c: void foo(){}  ->   void foo(void){}
	* src/dumb-alloc-global.h: void foo();   ->   void foo(void);
	* src/dumb-alloc-global.c: void foo(){}  ->   void foo(void){}

2017-08-12  Eric Herman <eric@freesa.org>

	Add "realloc" to the interface

	* src/dumb-alloc.h: realloc
	* src/dumb-alloc.c: realloc, some casting cleanu
	* src/dumb-alloc-global.h: realloc
	* src/dumb-alloc-global.c: realloc
	* tests/test_checkered_realloc.c: test realloc
	* Makefile.am: test_checkered_realloc
	* .gitignore: test_checkered_realloc

2017-08-05  Eric Herman <eric@freesa.org>

	remove dumb-printf-defines.h: simply always cast size_t to %lu

	* src/dumb-alloc.c: unconditionally cast to %lu
	* src/dumb-os-alloc.c: unconditionally cast to %lu
	* src/dumb-printf-defines.h: remove file
	* Makefile.am: remove reference to dumb-printf-defines.h

2017-07-30  Eric Herman <eric@freesa.org>

	Fixup headers installation, to only install the non-private headers.
	Add -I./src to CFLAGS such that we can change inlcudes syntax from:
	#include "foo.h" to #include <foo.h>

	* Makefile.am: fixup headers installation, -I./src
	* src/dumb-alloc.c: include "foo" to inlcude <foo>
	* src/dumb-alloc-global.c: "foo" to <foo>
	* src/dumb-alloc-global.h: "foo" to <foo>
	* src/dumb-alloc-private.h: "foo" to <foo>
	* src/dumb-os-alloc.c: "foo" to <foo>

2016-10-14  Eric Herman <eric@freesa.org>

	if 64bit, assume "size_t" is "unsigned long"
		(rather than "unsigned long long")

	* src/dumb-printf-defines.h: cast,printf from "%llu" to "%lu"

2016-10-14  Eric Herman <eric@freesa.org>

	move the "%" inside the FMT_ #defines

	* src/dumb-printf-defines.h": change the defines
	* src/dumb-alloc.c: change the printf strings
	* src/dumb-os-alloc.c: change the printf strings

2016-07-08  Eric Herman <eric@freesa.org>
